--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,1 +1,11 @@
 // app global css in SCSS form
+
+body {
+  background-color: #EFEBE9; // Beige très clair pour le fond global
+  color: #3E2723; // Texte marron très foncé pour une meilleure lisibilité et douceur
+}
+
+// Personnalisation des titres pour qu'ils utilisent la couleur primaire
+h1, h2, h3, h4, h5, h6 {
+  color: $primary;
+}
